test/Common/LinkerScriptParsing/Errors/Sections/IncludeErrorInMainScript/Inputs/1.c
int eldfn(void) { return 0; }

int main(void) { return eldfn(); }
